# sigv4-signing-examples

./: .gitignore  README.md  template.yml
api/: app.py
dotnet/: AWSSigner.csproj  Program.cs
golang/: main.go
no-sdk/bash/: AWSSigner.sh  main.sh
no-sdk/bash/samples/: ApiGatewaySample.sh  BedrockConverseSample.sh  S3-MRAP-sample.sh  S3Sample.sh
no-sdk/dotnet/: AWSSigner.cs  AwsCredentials.cs  HttpHelpers.cs  Program.cs
no-sdk/dotnet/samples/: ApiGatewaySample.cs  BedrockConverseSample.cs
no-sdk/golang/: main.go
no-sdk/java/: AWSSigner.java  AWSSignerPostExample.java  AwsCredentials.java  HttpHelpers.java  Program.java
no-sdk/java/samples/: ApiGatewaySample.java  BedrockConverseSample.java
no-sdk/nodejs/: main.js
no-sdk/python/: main.py
no-sdk/ruby/: main.rb
no-sdk/rust/: Cargo.toml
no-sdk/rust/src/: main.rs
nodejs/: main.js
python/: main.py
rust/: Cargo.toml  main.rs
sdk/golang/: go.mod  go.sum  main.go
sdk/nodejs/: main.js  package-lock.json  package.json
sdk/php/: composer.json  main.php
sdk/python/: main.py
sdk/ruby/: main.rb
sdk/rust/: Cargo.toml
sdk/rust/src/: main.rs
